--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,10 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
       
       - name: build
-        run: cl /EHsc Ex01.cpp 
-    
+        run: |
+          cl /EHsc Ex01.cpp 
+          echo 'OK'
+          Ex01
     
     
     
