--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,11 @@ jobs:
       - name: build
         run: cl /EHsc Ex01.cpp /out:Ex01.exe
     
-    
+      - name: 'Artifact_upload'
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact
+          path: "*.exe"
+          retention_days: 4
     
   
